applications/mindspore-usercenter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-usercenter
  name: mindspore-usercenter
