applications/mindspore-usercenter/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: mindspore-usercenter
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: website
  type: ClusterIP
