applications/mindspore-usercenter/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: website-ingress
  namespace: mindspore-usercenter
spec:
  rules:
  - host: id.mindspore.cn
    http:
      paths:
      - backend:
          serviceName: website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - id.mindspore.cn
    secretName: website-tls
